--- a/index.html
+++ b/index.html
@@ -1,65 +1,96 @@
 <!DOCTYPE html>
 <html lang="el">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Site Templates</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CV Site Templates</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Διάλεξε το δικό σου προσωπικό CV site</h1>
-        <p>Επαγγελματικό, δυναμικό, εύκολα επεξεργάσιμο</p>
-    </header>
 
-    <section id="templates">
-        <h2>Διάλεξε ένα από τα Templates μας</h2>
-        <div class="template-grid">
-            
-            <div class="template-card">
-                <img src="assets/img/template1.png" alt="Template 1" class="template-preview">
-                <div class="button-group">
-                    <button onclick="previewTemplate('templates/template1/index.html')">🔍 Preview</button>
-                    <button onclick="addToCart('template1')">🛒 Προσθήκη στο καλάθι</button>
-                </div>
-            </div>
+<header>
+  <h1>Διάλεξε το δικό σου προσωπικό CV site</h1>
+  <p>Επαγγελματικό, δυναμικό, εύκολα επεξεργάσιμο</p>
+</header>
 
-            
-           <div class="template-card">
-                <img src="assets/img/template2.png" alt="Template 2" class="template-preview">
-                <div class="button-group">
-                    <button onclick="previewTemplate('templates/template2/index.html')">🔍 Preview</button>
-                    <button onclick="addToCart('template2')">🛒 Προσθήκη στο καλάθι</button>
-                </div>
-            </div>
+<section id="templates">
+  <h2>Διάλεξε ένα από τα Templates μας</h2>
+  <div class="template-grid">
 
+    <div class="template-card" data-template-url="templates/template1/index.html">
+      <img src="assets/img/template1.png" alt="Template 1" class="template-preview">
+      <div class="button-group">
+        <button onclick="previewTemplate('templates/template1/index.html')">🔍 Preview</button>
+        <button onclick="addToCart('template1')">🛒 Επιλογή</button>
+      </div>
+    </div>
 
-            <div class="template-card">
-                <img src="assets/img/template3.png" alt="Template 3" class="template-preview">
-                <div class="button-group">
-                    <button onclick="previewTemplate('templates/template3/index.html')">🔍 Preview</button>
-                    <button onclick="addToCart('template3')">🛒 Προσθήκη στο καλάθι</button>
-                </div>
-            </div>
+    <div class="template-card" data-template-url="templates/template2/index.html">
+      <img src="assets/img/template2.png" alt="Template 2" class="template-preview">
+      <div class="button-group">
+        <button onclick="previewTemplate('templates/template2/index.html')">🔍 Preview</button>
+        <button onclick="addToCart('template2')">🛒 Επιλογή</button>
+      </div>
+    </div>
 
-        </div>
-    </section>
+    <div class="template-card" data-template-url="templates/template3/index.html">
+      <img src="assets/img/template3.png" alt="Template 3" class="template-preview">
+      <div class="button-group">
+        <button onclick="previewTemplate('templates/template3/index.html')">🔍 Preview</button>
+        <button onclick="addToCart('template3')">🛒 Επιλογή</button>
+      </div>
+    </div>
 
-   <section id="form">
-    <h2>Συμπλήρωσε τα στοιχεία σου</h2>
+  </div>
 
-    <p id="selectedDisplay" style="font-weight: bold; color: #0d47a1;">Δεν έχει επιλεχθεί ακόμα template.</p>
-
-        <form action="https://formspree.io/f/mldndnal" method="POST">
-            <input type="hidden" name="selected_template" id="selected_template">
-            <input type="text" name="name" placeholder="Ονοματεπώνυμο" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <textarea name="bio" placeholder="Σύντομο bio"></textarea>
-            <button type="submit">Αποστολή</button>
-        </form>
-    </section>
+  <p id="selectedDisplay">Δεν έχει επιλεχθεί ακόμα template.</p>
+</section>
 
 
-    <script src="order.js"></script>
+<section id="form">
+  <h2>Συμπλήρωσε τα στοιχεία σου</h2>
+  <form id="orderForm" action="https://formspree.io/f/mldndnal" method="POST">
+    <input type="hidden" name="selected_template" id="selected_template">
+    <input type="text" name="name" placeholder="Ονοματεπώνυμο" required>
+    <input type="email" name="email" placeholder="Email" required>
+    <textarea name="bio" placeholder="Σύντομο bio"></textarea>
+    <button type="submit">Αποστολή</button>
+  </form>
+</section>
+
+<script>
+  function addToCart(templateId) {
+    sessionStorage.setItem('selectedTemplate', templateId);
+
+    const displayField = document.getElementById("selectedDisplay");
+    displayField.textContent = "Επέλεξες το: " + templateId;
+
+    const hiddenInput = document.getElementById("selected_template");
+    hiddenInput.value = templateId;
+  }
+
+  function previewTemplate(templateUrl) {
+    window.open(templateUrl, '_blank');
+  }
+
+  document.querySelector("form").addEventListener("submit", function(e) {
+    const selectedTemplate = sessionStorage.getItem('selectedTemplate');
+    if (selectedTemplate) {
+      document.getElementById("selected_template").value = selectedTemplate;
+    }
+  });
+</script>
+
+
+
+<footer style="background-color: #0d47a1; color: white; text-align: center; padding: 1rem 0; margin-top: 2rem;">
+  <p style="margin: 0;">&copy; 2025 CV Templates by George. All rights reserved.</p>
+  <p>
+  <a href="terms.html" style="color: #bbdefb;">Όροι Χρήσης</a> | 
+  <a href="mailto:christopoulosg2@gmail.com" style="color: #bbdefb;">Επικοινωνία</a>
+</p>
+
+</footer>
+
 </body>
 </html>
