--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CV Site Templates</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+  <link rel="icon" href="assets/img/favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+<nav class="topbar">
+  <div class="container">
+    <a href="#" class="logo">CV Templates</a>
+    <ul class="nav-links">
+      <li><a href="#">Αρχική</a></li>
+      <li><a href="#templates">Σχέδια</a></li>
+      <li><a href="#form">Φόρμα Παραγγελίας</a></li>
+      <li><a href="mailto:christopoulosg2@gmail.com">Επικοινωνία</a></li>
+    </ul>
+  </div>
+</nav>
 
 <header>
   <h1>Διάλεξε το δικό σου προσωπικό CV site</h1>
