--- a/index.html
+++ b/index.html
@@ -103,6 +103,22 @@
 
     </footer>
 
+
+
+
+        <!-- Chatbot Button -->
+    <div id="chatbot-button">💬 Βοήθεια;</div>
+
+    <!-- Chatbot Box -->
+    <div id="chatbot-box" class="hidden">
+      <div id="chatbot-header">🤖 Βοηθός Επιλογής Template</div>
+      <div id="chatbot-content">
+        <p>Γεια σου! 👋 Θες να σε βοηθήσω να βρεις το κατάλληλο template;</p>
+        <button onclick="nextStep(1)">Ναι, φυσικά!</button>
+      </div>
+    </div>
+
+<script src="chatbot.js"></script>
 <script src="order.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
