--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
 <nav class="topbar">
   <div class="container">
     <a href="#" class="logo">CV Templates</a>
+
+    <div class="nav-toggle" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
     <ul class="nav-links">
       <li><a href="#">Αρχική</a></li>
       <li><a href="#templates">Σχέδια</a></li>
       <li><a href="#form">Φόρμα Παραγγελίας</a></li>
-      <li><a href="mailto:christopoulosg2@gmail.com">Επικοινωνία</a></li>
+      
     </ul>
   </div>
 </nav>
