--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </header>
 
     <section id="how-it-works" data-aos="fade-up">
-      <h2>Πώς λειτουργεί</h2>
+      <h2>Πώς λειτουργεί;</h2>
       <p style="max-width: 800px; margin: auto; font-size: 1.1rem;">
         Ενδιαφέρεσαι για ένα επαγγελματικό CV site; 
         Συμπλήρωσε την παρακάτω φόρμα και σύντομα θα επικοινωνήσουμε μαζί σου με όλες τις λεπτομέρειες (π.χ. τιμές, τρόπος πληρωμής, χρόνος υλοποίησης).
@@ -81,7 +81,7 @@
 
 
 <section id="form" data-aos="fade-up">
-  <h2>Συμπλήρωσε τα στοιχεία σου</h2>
+  <h2>Συμπλήρωσε τη φόρμα και θα επικοινωνήσουμε εμείς μαζί σου!</h2>
   <form id="orderForm" action="https://formspree.io/f/mldndnal" method="POST">
     <input type="hidden" name="selected_template" id="selected_template">
 
