--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </div>
 
     <ul class="nav-links">
-      <li><a href="#" id="nav-home">Αρχική</a></li>
       <li><a href="#templates" id="nav-templates">Σχέδια</a></li>
       <li><a href="#form" id="nav-form">Φόρμα Παραγγελίας</a></li>
+      <li><a href="#faq" id="nav-form">Συχνές Ερωτήσεις</a></li>
       <li>
         <div class="language-toggle">
           <input type="checkbox" id="langSwitch" onchange="toggleLanguage()" />
@@ -102,6 +102,77 @@
     </section>
 
 
+    <section id="faq" data-aos="fade-up">
+      <h2>Συχνές Ερωτήσεις</h2>
+
+      <div class="faq-item" onclick="toggleFaq(this)">
+        <div class="faq-question">
+          ❓ <strong>Πόσο κοστίζει ένα CV site;</strong>
+        </div>
+        <div class="faq-answer">
+          <p>Οι τιμές ξεκινούν από 30€, ανάλογα με τις απαιτήσεις και τις λειτουργίες.</p>
+        </div>
+      </div>
+
+      <div class="faq-item" onclick="toggleFaq(this)">
+        <div class="faq-question">
+          ❓ <strong>Σε πόσες μέρες θα είναι έτοιμο;</strong>
+        </div>
+        <div class="faq-answer">
+          <p>Μέσα σε 2–4 εργάσιμες μέρες από την υποβολή της φόρμας.</p>
+        </div>
+      </div>
+
+      <div class="faq-item" onclick="toggleFaq(this)">
+        <div class="faq-question">
+          ❓ <strong>Μπορώ να προσαρμόσω το template;</strong>
+        </div>
+        <div class="faq-answer">
+          <p>Φυσικά! Μπορούμε να αλλάξουμε χρώματα, γραμματοσειρές, εικόνες και περιεχόμενο ώστε να ταιριάζει στο στυλ σου.</p>
+        </div>
+      </div>
+
+      <div class="faq-item" onclick="toggleFaq(this)">
+        <div class="faq-question">
+          ❓ <strong>Θα μπορώ να επεξεργάζομαι το site μόνος/η μου;</strong>
+        </div>
+        <div class="faq-answer">
+          <p>Ναι! Σου παρέχουμε απλό dashboard ή οδηγίες για να ενημερώνεις το περιεχόμενο χωρίς να χρειάζεσαι γνώσεις προγραμματισμού.</p>
+        </div>
+      </div>
+
+      <div class="faq-item" onclick="toggleFaq(this)">
+        <div class="faq-question">
+          ❓ <strong>Τι χρειάζεται να στείλω για να ξεκινήσει η κατασκευή;</strong>
+        </div>
+        <div class="faq-answer">
+          <p>Αρκεί να συμπληρώσεις τη φόρμα με τα βασικά στοιχεία. Μπορείς να προσθέσεις bio, φωτογραφία, στοιχεία επικοινωνίας και ό,τι άλλο θέλεις.</p>
+        </div>
+      </div>
+
+      <div class="faq-item" onclick="toggleFaq(this)">
+        <div class="faq-question">
+          ❓ <strong>Μπορώ να το συνδέσω με το LinkedIn ή το domain μου;</strong>
+        </div>
+        <div class="faq-answer">
+          <p>Βεβαίως. Υποστηρίζουμε σύνδεση με LinkedIn, GitHub, ακόμα και με το προσωπικό σου domain εφόσον έχεις.</p>
+        </div>
+      </div>
+
+      <div class="faq-item" onclick="toggleFaq(this)">
+        <div class="faq-question">
+          ❓ <strong>Παρέχετε υποστήριξη μετά την παράδοση;</strong>
+        </div>
+        <div class="faq-answer">
+          <p>Ναι, μπορείς να επικοινωνήσεις για μικρές αλλαγές ή υποστήριξη έως και 30 ημέρες μετά την παράδοση. Μετά από αυτό υπάρχει διαθέσιμο πακέτο υποστήριξης.</p>
+        </div>
+      </div>
+    </section>
+
+
+
+  
+    <button id="scrollToTop" onclick="scrollToTop()">⬆️</button>
 
 
     <footer style="background-color: #0d47a1; color: white; text-align: center; padding: 1rem 0; margin-top: 2rem;">
@@ -112,6 +183,7 @@
     </p>
 
     </footer>
+
 
 
 
@@ -134,11 +206,40 @@
     <script src="lang.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
+      function toggleFaq(element) {
+        const answer = element.querySelector('.faq-answer');
+        answer.style.display = answer.style.display === 'block' ? 'none' : 'block';
+      }
+    </script>
+
+    <script>
       AOS.init({
         duration: 800,
         once: true,
       });
     </script>
+    <script>
+      const scrollBtn = document.getElementById('scrollToTop');
+
+      window.addEventListener('scroll', () => {
+        if (window.scrollY > 300) {
+          scrollBtn.classList.add('show');
+        } else {
+          scrollBtn.classList.remove('show');
+        }
+      });
+
+      function scrollToTop() {
+        window.scrollTo({
+          top: 0,
+          behavior: 'smooth'
+        });
+      }
+    </script>
+
+
+
+
 
 </body>
 </html>
